Increase chart height to improve layout; ensure axis text is more readable with larger font size.

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ h1 {
 }
 
 .chart {
-  height: 100px;
+  height: 110px;
   padding: 0 20px;
   box-sizing: border-box;
 }
@@ -18,4 +18,9 @@ h1 {
 svg {
   width: 100%;
   height: 100%;
+}
+
+/* Make axis text twice as big */
+.axis text {
+  font-size: 2em;
 }
